# productivity-mcp-servers

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  run-server.sh
.github/: copilot-instructions.md  secret_scanning.yml
docs/: SURVEY.md  tools.md
docs/.obsidian/: workspace.json
docs/openclaw-setup/: 01-mac-mini-server-ready.md  01-setting-up-your-mac-mini.md  02-talking-to-puddles-on-imessage.md  03-openclaw-and-agent-sandboxing.md  04-secure-gmail.md  README.md
docs/plans/: 001-gmail-auth-and-list-emails.md  004-fix-attachment-download.md  005-batch-archive-emails.md  006-monorepo-reorganization.md  009-mcp-security-hooks.md  010-secure-gmail-plugin.md  011-async-injection-guard-plugin.md  012-secure-web-providers.md  013-openclaw-plugins-scaffold.md  014-egress-approval-plugin.md  015-hook-evals.md  016-mac-mini-migration.md  016-openclaw-mac-mini-setup.md  017-secure-apple-calendar.md  018-contacts-as-trust.md  019-mcp-hooks-llm-timeouts.md  020-sandbox-skill-mirror.md
openclaw-plugins/: README.md
openclaw-plugins/secure-apple-calendar/: README.md  openclaw.plugin.json  package.json  vitest.all.config.ts  vitest.config.ts
openclaw-plugins/secure-gmail/: README.md  openclaw.plugin.json  package.json  vitest.integration.config.ts
scripts/mac-mini/: ai.openclaw.skills-mirror.plist  brew-autoupdate.sh  com.cole.brew-autoupdate.plist  install-brew-autoupdate.sh  install-openclaw-skills-mirror.sh  install-self-unlock.sh  mirror-openclaw-skills.sh  unlock-self.sh  (+1 more)
tests/: __init__.py  test_auth.py  test_server.py
(+60 files in other folders)
